--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "react": "18.0.0",
-    "react-native": "0.69.2",
-    "react-native-picker-select": "^8.0.4"
+    "react-native": "0.69.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
